// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components: Links ActionLinkBadge renders 1`] = `
<Fragment>
  <h2
    id="action-link-badge"
  >
    Action link with Badge
  </h2>
  <p>
    Action links.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <ActionLink
      badge={
        Object {
          "text": "40",
          "type": "badge-default badge-number",
        }
      }
      linkText="My link"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Links ActionLinkBadgeSmallText renders 1`] = `
<Fragment>
  <h2
    id="action-link-badge-small-text"
  >
    Action link with Badge and small text
  </h2>
  <p>
    Action Links can contain both Badge and small text
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <ActionLink
      badge={
        Object {
          "text": "40",
          "type": "badge-default badge-number",
        }
      }
      linkText="My link"
      smallText="This link directs to my page"
    />
  </ComponentPreview>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <ActionLink
      badge={
        Object {
          "text": "40",
          "type": "badge-default badge-number",
        }
      }
      linkText="My link"
      multiline={true}
      smallText="This link directs to my page"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Links ActionLinkNewTab renders 1`] = `
<Fragment>
  <h2
    id="action-link-new-tab"
  >
    Action link that opens a new tab
  </h2>
  <p>
    An Action Link used in cases where a new tab is supposed to open is provided. Use 
    <CodeTags
      code=".action-link-new-tab"
      type="secondary"
    />
     when it is known that the target will open in a new tab. 
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <ActionLink
      linkText="My link"
      newTab={true}
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Links ActionLinkSmallText renders 1`] = `
<Fragment>
  <h2
    id="action-link-small-text"
  >
    Action link with small text
  </h2>
  <p>
    A small text can be displayed as a part of the Action Link. There are two types of Action Links with small text, one with the inline small text and one with the texts on different lines.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <ActionLink
      linkText="My link"
      smallText="This link directs to my page"
    />
  </ComponentPreview>
  <p>
    Use 
    <CodeTags
      code=".action-link-multiline"
      type="secondary"
    />
     for the Action Link with the texts on different lines.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <ActionLink
      linkText="My link"
      multiline={true}
      smallText="This link directs to my page"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Links Overview renders 1`] = `
<Fragment>
  <h2
    id="action-link"
  >
    Action link
  </h2>
  <p>
    Action links.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <ActionLink
      linkText="My link"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Links renders 1`] = `
<DocContainer
  docToc={true}
>
  <p
    className="lead"
  >
    Links
  </p>
  <TextLinks />
  <ActionLink />
  <ActionLinkBadge />
  <ActionLinkSmallText />
  <ActionLinkBadgeSmallText />
  <ActionLinkNewTab />
</DocContainer>
`;
